@@ -1,3 +1,8 @@
+2007-07-28  Andreas Røsdal  <andreasr@gnome.org>
+
+	* gnome_sudoku.py: Fix the bug 'Ctrl-C in gnome-terminal 
+	crashes the game'. Patch from Quentin Neill in bug #401411.
+	
 2007-07-17  Thomas H.P. Andersen  <phomes@gmail.com>
 
 	* /src/lib/sudoku_maker.py: Set sys.setcheckinterval to 2^31-1 
